plugins {
    id 'org.springframework.boot' version '2.2.6.RELEASE'
    id 'io.spring.dependency-management' version '1.0.9.RELEASE'
    id 'java'
}

group 'org.example'
version '1.0-SNAPSHOT'

sourceCompatibility = '14'
targetCompatibility = '14'

repositories {
    mavenCentral()
}

dependencies {
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    testImplementation('org.springframework.boot:spring-boot-starter-test') {
        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
    }
}

compileJava {
    options.compilerArgs += ['--enable-preview']
}

test {
    jvmArgs += [
            '--enable-preview',
            '-XX:+ShowCodeDetailsInExceptionMessages'
    ]
    useJUnitPlatform()
}

tasks.withType(JavaExec) {
    jvmArgs += [
            '--enable-preview',
            '-XX:+ShowCodeDetailsInExceptionMessages'
    ]
}